k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: semantis
  labels:
    app: semantis-ai
